# larray_eurostat

./: .gitignore  .travis.yml  README.md  README.rst  environment.yml  make_release.py  next_release.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  test-larray-eurostat.yml
condarecipe/larray_eurostat/: meta.yaml
larray_eurostat/: __init__.py  tsv.py
larray_eurostat/tests/: test_tsv.py
