[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 77.0.3",
]

[project]
name = "larray_eurostat"
version = "0.35-dev"
description = "Additional package to import Eurostat files using LArray"
readme = "README.rst"

authors = [
  {name = "Geert Bryon"},
  {name = "Gaetan de Menten", email = "gdementen@gmail.com"},
  {name = "Alix Damman", email = "ald@plan.be"},
  {name = "Yannick Van den Abbeel"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
license = 'GPL-3.0-only'
license-files = ["LICENSE"]

requires-python = ">=3.9"
dependencies = [
  "larray",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/larray-project/larray_eurostat"
Repository = "https://github.com/larray-project/larray_eurostat"
Issues = "https://github.com/larray-project/larray_eurostat/issues"

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "larray_eurostat"
]
addopts = [
    "-v",
    "--doctest-modules",
#    "--cov",
]

filterwarnings = [
    # turn warnings into errors (unless they are explicitly handled in tests or ignored here)
    "error",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "experiments",
]

line-length = 120

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
# fixable = ["A", "B", "C", "D", "E", "F", "..."]
# unfixable = []

[tool.ruff.lint.per-file-ignores]
"*\\tests\\test_*" = [
    "S101",   # allow using assert in test functions
    "D103"    # do not require docstrings for test functions
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

